[FIX] web_editor: link popover position
Before this commit:

- In mass mailing, when the link popover opens, clicking on a link that is
  available near the edge of the mailing template beside the sidebar would
  sometimes cause the popover to appear behind the sidebar.

After this commit:

- Clicking on a link near the edge of the mailing template now ensures that the
  link popover does not appear behind the sidebar.

task-4237091

closes odoo/odoo#191910

X-original-commit: 56a490fea654ac2afbd5f931601def649be6d53c

--- a/addons/mass_mailing/static/src/scss/mass_mailing.wysiwyg.scss
+++ b/addons/mass_mailing/static/src/scss/mass_mailing.wysiwyg.scss
@@ -1,4 +1,9 @@
 .o_mass_mailing_iframe body {
+    #oe_manipulators {
+       // Sidebar is already in + 1
+       z-index: $o-we-overlay-zindex + 2;
+    }
+
     .modal:not(.o_technical_modal) {
         top: 0 !important;
         // set z-index so customize options visible on dialog.
